Shift Jeerani text right to avoid ي dots overlap

--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,7 @@ body {
     margin-top: 6px;
     text-indent: 11px;
     direction: ltr;
+    padding-right: 12px;
 }
 
 .title {
